--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,21 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
+  <meta property="og:title" content="Kolivan - Nəqliyyat Xidmətlərində Etibarlı Tərəfdaşınız">
+  <meta property="og:description" content="Yük və sərnişin daşınması xidmətləri üçün etibarlı və effektiv həllər təklif edir.">
+  <meta property="og:image" content="https://media.licdn.com/dms/image/D4E0BAQFUfbvVbE6hFw/company-logo_200_200/0/1686038786460?e=2147483647&v=beta&t=a7jxYd-BAJj8oADk8dEmeFeKfyPrDR6bPMUptsZs7zI">
+  <meta property="og:url" content="https://www.kolivan.az/" />
+  <meta property="og:type" content="website" />
+  <meta name="keywords" content="yük daşıma, sərnişin daşıma, yük, avtobus, truck, qurzavoy">
+
+
   <meta name="viewport" content="width=device-width, user-scalable=no">
-  <meta name="theme-color" content="#000000" />
+  <meta name="theme-color" content="#242424" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Kolivan Logistics</title>
+  <title>Kolivan | Sərnişin və yük daşınması</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6595910908105838"
     crossorigin="anonymous"></script>
 </head>
